src/objects/SRPFieldHistoryConversionSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store values to control SRP Field History Conversion to Big Object SRP Field History records</description>
    <fields>
        <fullName>beginDeleteId__c</fullName>
        <label>BeginDeleteId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>conversionSize__c</fullName>
        <description>Number of records to process in a single run.</description>
        <label>Conversion Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cronTriggerId__c</fullName>
        <description>Holds the value for the current CronTrigger</description>
        <label>cronTriggerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>defaultStartTime__c</fullName>
        <description>Default hour in military value (i.e. 10 PM would be 22) that the next process should be started if no records remain to be converted.</description>
        <label>Default Start Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>deleteCronTriggerId__c</fullName>
        <label>deleteCronTriggerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deleteSObjectNameIndex__c</fullName>
        <label>DeleteSObjectNameIndex</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deleteSize__c</fullName>
        <label>DeleteSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>emailDistribution__c</fullName>
        <description>List of addresses that error email will be sent to if a record cannot be converted within 5 tries.  Should be formatted as &apos;email@email.com&apos;, &apos;email2@email2.com&apos;</description>
        <label>Email Distribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minutesBetweenRuns__c</fullName>
        <description>Number of minutes to delay before running the next scheduled group if items remain.</description>
        <label>Minutes Between Runs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>referenceIdGroupSize__c</fullName>
        <label>Reference Id Group Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SRP Field History Conversion Settings</label>
</CustomObject>